frontend-react/src/styles/landing.css
/* ... */
.reviews__slider-slide-name {
  margin: 0 0 5px;
  font-family: var(--font-family-sans);
  font-weight: 700;
  font-size: 20px;
  color: var(--color-grey-700);
}
.reviews__slider-slide-type {
  margin: 0 0 20px;
  font-family: var(--font-family-sans);
  font-weight: 400;
  font-size: 16px;
  color: var(--color-grey-700);
  opacity: 0.5;
}
.reviews__slider-slide-text {
  margin: 0 0 20px;
  font-family: var(--font-family-sans);
  font-size: 16px;
  line-height: 1.6;
  color: var(--color-grey-700);
  opacity: 0.8;
  -webkit-box-flex: 1;
      -ms-flex: 1 1 auto;
          flex: 1 1 auto;
}
.reviews__slider-slide-bottom {
  display: -webkit-box;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: justify;
      -ms-flex-pack: justify;
          justify-content: space-between;
}
.reviews__slider-slide-bottom::after {
  content: "";
  display: inline-block;
  width: 58px;
  aspect-ratio: 1;
  background: url(/assets/icons/quote.svg) center/cover no-repeat;
  opacity: 0.3;
  -webkit-transition: opacity ease-out 0.2s;
  transition: opacity ease-out 0.2s;
}
.reviews__slider-slide-rating {
  display: -webkit-box;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-align: center;
      -ms-flex-align: center;
          align-items: center;
  gap: 5px;
  -webkit-box-flex: 0;
      -ms-flex: 0 0 auto;
          flex: 0 0 auto;
}
.reviews__slider-slide-rating-star {
  display: inline-block;
  -webkit-box-flex: 0;
      -ms-flex: 0 0 auto;
          flex: 0 0 auto;
  width: 17px;
  aspect-ratio: 1;
  background: url(/assets/icons/star.svg) center/cover no-repeat;
}
.reviews__slider .swiper-slide-active .reviews__slider-slide-bottom::after {
  opacity: 1;
}
.reviews__slider-controls {
  display: -webkit-box;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-align: center;
      -ms-flex-align: center;
          align-items: center;
  -webkit-box-pack: center;
      -ms-flex-pack: center;
          justify-content: center;
  gap: 30px;
  margin: 40px 0 0;
}
.reviews__slider-controls-prev, .reviews__slider-controls-next {
  display: inline-block;
  -webkit-box-flex: 0;
      -ms-flex: 0 0 auto;
          flex: 0 0 auto;
  width: 30px;
  aspect-ratio: 1/1;
  background: url(/assets/icons/arrow-next.svg) center/cover no-repeat;
  -webkit-user-select: none;
     -moz-user-select: none;
      -ms-user-select: none;
          user-select: none;
  cursor: pointer;
}
.reviews__slider-controls-prev {
  -webkit-transform: rotate(180deg);
          transform: rotate(180deg);
}
.reviews__slider-controls-next {
  -webkit-transform: rotate(0deg);
          transform: rotate(0deg);
}
.reviews__slider-controls-pagination {
  display: -webkit-box;
  display: -ms-flexbox;
  display: flex;
  -ms-flex-wrap: wrap;
      flex-wrap: wrap;
  -webkit-box-align: center;
      -ms-flex-align: center;
          align-items: center;
  -webkit-box-pack: center;
      -ms-flex-pack: center;
          justify-content: center;
  -webkit-box-flex: 0;
      -ms-flex: 0 1 auto;
          flex: 0 1 auto;
  gap: 7px;
  width: auto;
}
.reviews__slider-controls-pagination .swiper-pagination-bullet {
  display: block;
  -webkit-box-flex: 0;
      -ms-flex: 0 0 auto;
          flex: 0 0 auto;
  margin: 0;
  width: 7px;
  height: 7px;
  border-radius: 90px;
  opacity: 1;
  background-color: #ededed;
  -webkit-transition-property: width;
  transition-property: width;
  -webkit-transition-timing-function: ease-out;
          transition-timing-function: ease-out;
  -webkit-transition-duration: 0.4s;
          transition-duration: 0.4s;
}
.reviews__slider-controls-pagination .swiper-pagination-bullet-active {
  width: 35px;
  background-color: var(--color-brand-orange-500);
}

.leave-order {
  padding-bottom: 100px;
}
@media (max-width: 1024px) {
  .leave-order {
    padding-bottom: 70px;
  }
}
@media (max-width: 576px) {
  .leave-order {
    padding-bottom: 50px;
  }
}

.leave-order__title {
  margin: 0 0 30px;
  font-family: var(--font-family-display);
  font-weight: 800;
  font-size: 48px;
  text-align: center;
  color: var(--color-brand-purple-500);
}
@media (max-width: 1024px) {
  .leave-order__title {
    font-size: 40px;
    text-align: center;
  }
}
@media (max-width: 576px) {
  .leave-order__title {
    font-size: 32px;
  }
}
.leave-order__steps {
  position: relative;
}
.leave-order__steps::before {
  content: "";
  position: absolute;
  top: 102px;
  left: 0;
  right: 0;
  z-index: 10;
  display: block;
  width: 100%;
  height: 10px;
  border-radius: 90px;
  background: linear-gradient(147deg, var(--color-brand-blue-500) 0%, #b9e0ff 100%);
}
@media (max-width: 1024px) {
  .leave-order__steps::before {
    top: 0;
    left: 50%;
    right: auto;
    bottom: 0;
    width: 10px;
    height: auto;
    opacity: 0.25;
    -webkit-transform: translateX(-50%);
            transform: translateX(-50%);
  }
}
.leave-order__steps-wrapper {
  position: relative;
  z-index: 20;
  display: -webkit-box;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-align: start;
      -ms-flex-align: start;
          align-items: flex-start;
  -webkit-box-pack: justify;
      -ms-flex-pack: justify;
          justify-content: space-between;
  gap: 30px;
  max-width: 1064px;
  width: 100%;
  margin: 0 auto;
}
@media (max-width: 1024px) {
  .leave-order__steps-wrapper {
    -webkit-box-orient: vertical;
    -webkit-box-direction: normal;
        -ms-flex-direction: column;
            flex-direction: column;
    -webkit-box-align: center;
        -ms-flex-align: center;
            align-items: center;
    -webkit-box-pack: center;
        -ms-flex-pack: center;
            justify-content: center;
    padding: 40px 0;
  }
}
/* ... */

